sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: identifier expected but integer literal found.
for(i<- getnombrevaleurs():Int-2 to 0)
                               ^AlgBubbleSort2:8: error: ')' expected but '}' found.
}
^